--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -19,16 +19,31 @@ h1 {
     font-size: 72px;
     font-weight: 400;
 }
+h2 {
+    margin-bottom: 24px;
+    font-size: 56px;
+    font-weight: 400;
+    letter-spacing: -.02em;
+    line-height: 1.15;
+}
+h3 {
+    font-size: 24px;
+    letter-spacing: -.02em;
+    margin-bottom: 20px;
+    line-height: 1.25;
+    font-weight: 500;
+}
 a {
-	text-decoration: none;
+    text-decoration: none;
     -webkit-transition: color .35s ease;
-    		transition: color .35s ease;
+            transition: color .35s ease;
 }
 body {
-	margin: 0;
+    margin: 0;
     font-size: 16px;
     line-height: 1.5;
     color: #3c3c3c;
+    background-color: #f8f9fa;
     font-family: 'Rubik', sans-serif;
 }
 h4,
@@ -38,11 +53,39 @@ h4,
     margin-bottom: 48px;
     font-weight: 500;
 }
+small {
+    margin-bottom: 24px;
+    font-size: 14px;
+    letter-spacing: 1px;
+    display: block;
+}
 .lead {
     font-size: 20px;
 }
+.small {
+    font-size: 13px;
+}
+#item-price {
+    font-size: 25px;
+    display: flex;
+}
+.larger,
+#item-price span {
+    letter-spacing: -.02em;
+    font-size: 72px;
+    line-height: 1.1;
+}
 .txt-center {
     text-align: center;
+}
+.gray-color {
+    color: #adb5bd;
+}
+.bold {
+    font-weight: 500;
+}
+.italic {
+    font-style: italic;
 }
 /*--------------------------------------------------------------
 # General
@@ -53,9 +96,9 @@ h4,
     margin: 0;
     overflow: hidden;
 }
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
+html {
+    scroll-behavior: smooth;
+}
 .col-full {
     max-width: 1140px;
     padding-right: 12px;
@@ -69,18 +112,23 @@ h4,
 .bg-dark {
     background-color: #3c3c3c;
 }
+.bg-dark,
 .bg-dark a {
-	color: #fff;
+    color: #fff;
+}
+.bg-white {
+    background-color: #fff;
 }
 /*--------------------------------------------------------------
 # Form
 --------------------------------------------------------------*/
 .btn {
-	display: inline-flex;
+    display: inline-flex;
     font-weight: 500;
     border-radius: 4px;
+    border: 1px solid;
     -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    		transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+            transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 .btn--md {
     padding: 5px 16px;
@@ -101,6 +149,20 @@ h4,
     -webkit-box-shadow: 0 0 0 3px rgba(113, 176, 47, 0.5);
             box-shadow: 0 0 0 3px rgba(113, 176, 47, 0.5);
 }
+.btn--line-info {
+    color: #96588a;
+    background-color: #fff;
+    border-color: #e6e6e6;
+}
+.btn--line-info:hover {
+    color: #fff;
+    background-color: #96588a;
+    border-color: #96588a;
+}
+.btn--line-info:focus {
+    -webkit-box-shadow: 0 0 0 3px rgba(150, 88, 138, 0.5);
+            box-shadow: 0 0 0 3px rgba(150, 88, 138, 0.5);
+}
 /*--------------------------------------------------------------
 # Element
 --------------------------------------------------------------*/
@@ -114,19 +176,21 @@ h4,
     border-radius: 4px;
 }
 .fixed {
-	position: fixed;
+    position: fixed;
     z-index: 5;
     width: 100%;
     top: 0;
 }
 ul.line-list {
-    padding: 0;
-    margin: 0;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
 }
-.line-list__item {
+.none-list {
+    padding: 0;
+    margin: 0;
+}
+.none-list li {
     list-style: none;
 }
 img {
@@ -139,11 +203,18 @@ img {
 .pd-t-60 {
     padding-top: 60px;
 }
+.lg-spc {
+    margin-left: 24px;
+    margin-right: 24px;
+}
+.max-w-590 {
+    max-width: 590px;
+}
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 .site-header {
-	min-height: 64px;
+    min-height: 64px;
 }
 .site-header__container {
     justify-content: space-between;
@@ -152,20 +223,20 @@ img {
 }
 .site-header__container,
 .site-brand {
-	display: flex;
-	align-items: center;
+    display: flex;
+    align-items: center;
 }
 .site-brand img {
-	margin-right: 10px;
+    margin-right: 10px;
 }
 .nav__link {
-	padding: 8px;
-	display: inline-flex;
+    padding: 8px;
+    display: inline-flex;
     align-items: center;
 }
 .nav__link:focus,
 .nav__link:hover {
-	color: rgba(255, 255, 255, 0.75);
+    color: rgba(255, 255, 255, 0.75);
 }
 /*--------------------------------------------------------------
 # Alignment
@@ -175,21 +246,108 @@ img {
 }
 .align-center {
     margin: 0 auto;
+    justify-content: center;
 }
 /*--------------------------------------------------------------
 # Columns
 --------------------------------------------------------------*/
 .cols {
     display: flex;
+    flex-wrap: wrap;
+}
+.cols--pd-24 .col {
+    padding: 0 12px;
+}
+.cols--pd-60 .col {
+    padding: 0 30px;
 }
 .col {
-    padding: 0 12px;
     flex-grow: 1;
+    box-sizing: border-box;
 }
 .col--40 {
     max-width: 40%;
     flex-basis: 40%;
 }
-@media (max-width: 768px) {
-
+.col--50 {
+    max-width: 50%;
+    flex-basis: 50%;
+}
+/*--------------------------------------------------------------
+# card
+--------------------------------------------------------------*/
+.card {
+    padding: 36px;
+    border: 1px solid #e9ecef;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.card:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.card:nth-child(n+2) {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-left: 0;
+}
+.card ul,
+.card .small {
+    opacity: 0.8;
+}
+.card ul {
+    margin-bottom: 28px;
+}
+.card > span {
+    margin-bottom: 22px;
+}
+.card .btn {
+   margin-top: auto; 
+}
+.paddle-gross:nth-letter(2) {
+    font-size: 2px;
+}
+/*--------------------------------------------------------------
+# review
+--------------------------------------------------------------*/
+.review {
+    margin-bottom: 48px;
+    display: flex;
+    align-items: flex-start;
+}
+.review__avatar {
+    width: 72px;
+    border-radius: 50%;
+    margin-right: 24px;
+}
+.review__content {
+    text-align: left;
+}
+.review__content a {
+    color: #6e6e6e;
+}
+.review__content p {
+    margin-bottom: 8px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+.review__content a:before {
+    content: "―";
+    margin-right: 3px;
+}
+.review__content a:after {
+    content: "→";
+    opacity: 0;
+    margin-left: 3px;
+    -webkit-transition: opacity .25s ease;
+       -moz-transition: opacity .25s ease;
+        -ms-transition: opacity .25s ease;
+         -o-transition: opacity .25s ease;
+            transition: opacity .25s ease;
+}
+.review__content a:hover:after {
+    opacity: 1;
 }
