--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -35,6 +35,7 @@ h3 {
 }
 .title {
     font-size: 40px;
+    margin-top: 6px;
 }
 a {
     text-decoration: none;
@@ -215,11 +216,20 @@ img {
     -webkit-transform: scalex(-1);
             transform: scalex(-1);
 }
+.pd-t-70 {
+    padding-top: 70px;
+}
 .pd-t-60 {
     padding-top: 60px;
 }
 .pd-t-30 {
     padding-top: 30px;
+}
+.pd-b-50 {
+    padding-bottom: 50px;
+}
+.pd-b-20 {
+    padding-bottom: 20px;
 }
 .pd-b-13 {
     padding-bottom: 13px;
